[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/select_song_menu/song_button.gd" type="Script" id=1]
[ext_resource path="res://scenes/select_song_menu/button_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://style/panel_black.tres" type="StyleBox" id=3]
[ext_resource path="res://scenes/select_song_menu/song_container.gd" type="Script" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="SongContainer" type="HBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )

[node name="SongButton" type="Button" parent="."]
unique_name_in_owner = true
margin_right = 278.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 150 )
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = ExtResource( 3 )
toggle_mode = true
text = "Song Name"
script = ExtResource( 1 )

[connection signal="song_data_changed" from="." to="SongButton" method="_on_SongContainer_song_data_changed"]
[connection signal="double_clicked" from="SongButton" to="." method="_on_SongButton_double_clicked"]
[connection signal="mouse_entered" from="SongButton" to="SongButton" method="_on_SongButton_mouse_entered"]
[connection signal="mouse_exited" from="SongButton" to="SongButton" method="_on_SongButton_mouse_exited"]
[connection signal="toggled" from="SongButton" to="." method="_on_SongButton_toggled"]
